--- a/src/app.css
+++ b/src/app.css
@@ -1,6 +1,51 @@
 .canvas {
-	margin:auto;
+	display: block;
+	padding: 0;
+	margin:  0 auto;
+	margin-top: 30px;
+
+	box-shadow: 0px 0px 10px 5px rgba(17, 17 , 17, 0.14);
+}
+
+
+.header {
 	display: flex;
-	flex-direction: column;
-	border-style: solid;
+	flex-direction: row;
+	height: 90px;
+	margin: 0;
+
+	background-color: rgba(249, 249, 249, 1);
+	box-shadow: 0px 5px 10px 0px rgba(17, 17 , 17, 0.14);
+}
+
+.color-picker-wrapper {
+	width: 20px;
+	height: 20px;
+	align-self: center;
+	margin-left: 20px;
+}
+
+.color-box-button {
+	width: 100%;
+	height: 100%;
+}
+
+.clear-canvas-button {
+	width: 80px;
+	height: 40px;
+	margin-left: auto;
+	margin-right: 20px;
+	align-self: center;
+
+	background-color: rgb(237, 237, 237, 1);
+	border: none;
+	border-radius: 8px;
+	
+	cursor: pointer;
+	outline: 0;
+}
+
+
+.clear-canvas-button:active {
+	transform: scale(0.95, 0.95);
 }
