--- a/src/app.css
+++ b/src/app.css
@@ -1,10 +1,18 @@
 .canvas {
-	display: block;
-	padding: 0;
-	margin:  0 auto;
+	position: absolute;
+
+	left: 0; 
+	right: 0;
+
 	margin-top: 30px;
+  	margin-left: auto; 
+  	margin-right: auto; 
 
 	box-shadow: 0px 0px 10px 5px rgba(17, 17 , 17, 0.14);
+}
+
+.canvas-catcher {
+	background: transparent;
 }
 
 
