--- a/src/app.css
+++ b/src/app.css
@@ -15,17 +15,6 @@
 	background: transparent;
 }
 
-
-.header {
-	display: flex;
-	flex-direction: row;
-	height: 90px;
-	margin: 0;
-
-	background-color: rgba(249, 249, 249, 1);
-	box-shadow: 0px 5px 10px 0px rgba(17, 17 , 17, 0.14);
-}
-
 .color-picker-wrapper {
 	width: 20px;
 	height: 20px;
@@ -45,7 +34,7 @@
 	margin-right: 20px;
 	align-self: center;
 
-	background-color: rgb(237, 237, 237, 1);
+	background-color: rgba(237, 237, 237, 1);
 	border: none;
 	border-radius: 8px;
 	
@@ -53,7 +42,39 @@
 	outline: 0;
 }
 
-
 .clear-canvas-button:active {
 	transform: scale(0.95, 0.95);
+}
+
+.header {
+	display: flex;
+	flex-direction: row;
+	height: 90px;
+	margin: 0;
+
+	background-color: rgba(249, 249, 249, 1);
+	box-shadow: 0px 5px 10px 0px rgba(17, 17 , 17, 0.14);
+}
+
+.paint-tools-list {
+	list-style: none;
+
+}
+
+.paint-tools-list li {
+	list-style: none;
+	padding: 2px;
+	margin: 2px 0;
+	-webkit-user-select: none !important;
+	text-align: center;
+}
+
+.paint-tools-list li:hover {
+	font-weight:bold;
+}
+
+.paint-tools-list li.selected-paint-tool {
+	text-align: center;
+	border-radius: 5px;
+	background: rgba(237, 237, 237, 1);
 }
